tests/specs/PrivateTypeReferencedFromNamespace.txt
# mod.ts
export namespace Test {
  export class Other extends YesDiagnostic {

  }

  class Private implements NoDiagnostic {}
}

class YesDiagnostic {}
interface NoDiagnostic {}

# diagnostics
error[private-type-ref]: public type 'Test.Other' references private type 'YesDiagnostic'
 --> /mod.ts:2:3
  | 
2 |   export class Other extends YesDiagnostic {
  |   ^
  = hint: make the referenced type public or remove the reference
  | 
9 | class YesDiagnostic {}
  | - this is the referenced type

  info: to ensure documentation is complete all types that are exposed in the public API must be public


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Test {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export class Other extends YesDiagnostic {
  |   ^

# output.txt
Defined in file:///mod.ts:9:1

private class YesDiagnostic


Defined in file:///mod.ts:1:1

namespace Test

  class Other extends YesDiagnostic


# output.json
[
  {
    "kind": "namespace",
    "name": "Test",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "namespaceDef": {
      "elements": [
        {
          "kind": "class",
          "name": "Other",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 26
          },
          "declarationKind": "export",
          "classDef": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": "YesDiagnostic",
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  },
  {
    "kind": "class",
    "name": "YesDiagnostic",
    "location": {
      "filename": "file:///mod.ts",
      "line": 9,
      "col": 0,
      "byteIndex": 121
    },
    "declarationKind": "private",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
